--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -3,6 +3,28 @@ h1 {
     font-size: 2.5rem;
 }
 
+.whole {
+    background-color: rgb(233, 190, 165);
+    font-family: 'Amatic SC', cursive;
+    font-weight: 600;
+    font-size: x-large;
+    padding: 30px;
+}
+
+.logo_nav {
+    margin: 10px;
+    box-shadow: 2px 2px 2px 2px rgb(137, 94, 14);
+    border-radius: 50%;
+
+}
+
+.logo_box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
 fieldset {
     min-width: 0;
     padding: 1rem 0;
@@ -14,6 +36,7 @@ fieldset {
     display: inline-block;
     margin: 0 auto;
     text-align: left;
+    color: white;
 }
 
 .form--login>fieldset>input[type="email"] {
@@ -49,14 +72,49 @@ fieldset {
 .form--login {
     background-position-x: right;
     z-index: 1;
-    min-height: 25rem;
-    min-width: 45rem;
     background-color: hsla(0, 0%, 100%, 0.40);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
+    margin: 50px;
+    padding: 30px;
+    box-shadow: 0 0 10px 10px rgb(164, 157, 70);
 }
 
 .button--close {
     position: relative;
     bottom: -2rem;
+}
+
+button {
+    width: 100px;
+    height: 30px;
+    color: rgb(137, 94, 14);
+    font-family: 'Amatic SC', cursive;
+    font-size: medium;
+    font-weight: bolder;
+    background-color: rgb(233, 190, 165);
+    border: 2px solid rgb(137, 94, 14);
+    box-shadow: 0 0 2px 2px rgb(164, 157, 70);
+    margin: 15px;
+}
+
+
+
+.link--register {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: rgb(137, 94, 14);
+    font-family: 'Amatic SC', cursive;
+    font-size: medium;
+    font-weight: bolder;
+}
+
+.pleaseRegister {
+    color: rgb(137, 94, 14);
+    font-family: 'Amatic SC', cursive;
+    font-size: x-large;
+    font-weight: bolder;
 }
