--- a/src/components/phases/phases.css
+++ b/src/components/phases/phases.css
@@ -16,16 +16,18 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
 }
 
 .inner_container {
     background-color: rgb(233, 190, 165);
     width: 700px;
     height: 700px;
+    border: 5px dotted white;
 }
 
 .inner_phases {
-    background-image: url("../images/phases.jpg");
+    background-image: url("../images/phases2.jpg");
     background-size: 600px;
     width: 600px;
     height: 600px;
