--- a/src/components/recipes/myRecipes.css
+++ b/src/components/recipes/myRecipes.css
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
 }
 
 .inner_list {
@@ -40,8 +39,8 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    align-items: left;
+    justify-content: left;
 }
 
 .outer {
@@ -103,4 +102,27 @@
 
 .recipe::marker {
     color: rgb(137, 94, 14);
+}
+
+.listPicBox {
+    width: 65px;
+    height: 100%;
+    border: 2px solid white;
+    margin: 5px;
+}
+
+.recipe {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.titleBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
