--- a/src/components/recipes/recipeList.css
+++ b/src/components/recipes/recipeList.css
@@ -61,7 +61,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 0;
+    margin-top: 10px;
     color: rgb(137, 94, 14);
     font-family: 'Amatic SC', cursive;
     font-size: x-large;
@@ -95,4 +95,11 @@
     box-shadow: 0 0 2px 2px rgb(164, 157, 70);
     margin: 15px;
 
+}
+
+.picInList {
+    width: 65px;
+    height: 100%;
+    border: 5px solid rgb(233, 190, 165);
+    margin: 5px;
 }
