--- a/src/components/views/views.css
+++ b/src/components/views/views.css
@@ -1,6 +1,10 @@
 .banner {
     text-align: center;
     margin: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .banner_img {
