--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -13,7 +13,7 @@
     font-family: 'Amatic SC', cursive;
     font-weight: 600;
     font-size: x-large;
-    background-color: white;
+    background-color: rgb(233, 190, 165);
 }
 
 .logo_nav {
@@ -39,6 +39,5 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    border-bottom: 50px solid white;
 
 }
