--- a/src/components/phases/phases.css
+++ b/src/components/phases/phases.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
 
 .phase_container {
-    margin-top: 20px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -10,27 +9,34 @@
 
 .phases {
     background-color: rgb(137, 94, 14);
-    width: 800px;
-    height: 800px;
+    width: 500px;
+    height: 500px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
+    box-shadow: 0 0 5px 5px rgb(233, 190, 165);
+    margin-bottom: 100px;
+    border-radius: 2%;
 }
 
 .inner_container {
     background-color: rgb(233, 190, 165);
-    width: 700px;
-    height: 700px;
+    width: 450px;
+    height: 450px;
     border: 5px dotted white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2%;
 }
 
 .inner_phases {
     background-image: url("../images/phases2.jpg");
-    background-size: 600px;
-    width: 600px;
-    height: 600px;
+    background-size: 400px;
+    width: 400px;
+    height: 400px;
     border: 7px solid;
     color: rgb(233, 190, 165);
     margin: 50px;
@@ -38,9 +44,10 @@
     font-size: x-large;
     font-weight: 800;
     display: grid;
-    grid-template-rows: repeat(2, 300px);
-    grid-template-columns: repeat(2, 300px);
+    grid-template-rows: repeat(2, 200px);
+    grid-template-columns: repeat(2, 200px);
     box-shadow: 0 0 10px 10px rgb(164, 157, 70);
+    border-radius: 2%;
 }
 
 .phase {
@@ -49,6 +56,7 @@
     text-align: center;
     align-items: center;
     justify-content: center;
+    border-radius: 2%;
 }
 
 
