--- a/src/components/recipes/recipeList.css
+++ b/src/components/recipes/recipeList.css
@@ -1,20 +1,22 @@
 .flexBox_recipeList {
-    margin-top: 20px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    border-radius: 2%;
+    padding-bottom: 100px;
+
 }
 
 .listBox1 {
-    background-color: rgb(137, 94, 14);
     width: 800px;
     height: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 20px;
+    border-radius: 2%;
+
 }
 
 .listBox2 {
@@ -23,12 +25,13 @@
     justify-content: center;
     align-items: center;
     background-image: url("../images/background.jpg");
-    background-size: 800px;
+    background-size: 200px;
     width: 675px;
     height: auto;
-    margin: 50px;
     border: 10px solid rgb(233, 190, 165);
     box-shadow: 0 0 5px 5px rgb(164, 157, 70);
+    border-radius: 2%;
+
 }
 
 
@@ -37,12 +40,14 @@
     border: 5px solid rgb(233, 190, 165);
     width: 575px;
     height: auto;
-    margin: 25px;
+    margin: 20px;
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    border-radius: 2%;
+
 }
 
 .titleBox {
@@ -54,6 +59,8 @@
     font-family: 'Amatic SC', cursive;
     font-size: x-large;
     font-weight: 2000;
+    border-radius: 2%;
+
 }
 
 .phaseRecipe_name {
@@ -65,8 +72,10 @@
     color: rgb(137, 94, 14);
     font-family: 'Amatic SC', cursive;
     font-size: x-large;
-    font-weight: 2000;
+    font-weight: 600;
     text-decoration: none;
+    border-radius: 2%;
+
 }
 
 .list-button {
@@ -80,6 +89,8 @@
     border: 2px solid rgb(137, 94, 14);
     box-shadow: 0 0 2px 2px rgb(164, 157, 70);
     margin: 5px;
+    border-radius: 2%;
+
 
 }
 
@@ -93,7 +104,9 @@
     background-color: rgb(233, 190, 165);
     border: 2px solid rgb(137, 94, 14);
     box-shadow: 0 0 2px 2px rgb(164, 157, 70);
-    margin: 15px;
+    margin: 5px;
+    border-radius: 2%;
+
 
 }
 
@@ -102,4 +115,25 @@
     height: 100%;
     border: 5px solid rgb(233, 190, 165);
     margin: 5px;
+    border-radius: 2%;
+
+}
+
+.nameAndButton {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: left;
+}
+
+.phaseRecipe {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    padding: 10px;
+}
+
+.buttons {
+    margin-bottom: 10px;
 }
