--- a/src/components/recipes/shoppingList.css
+++ b/src/components/recipes/shoppingList.css
@@ -1,20 +1,12 @@
-.shopping_list {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
 .shopBox1 {
-    background-color: rgb(137, 94, 14);
-    width: 800px;
     height: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 20px;
+    padding-bottom: 100px;
+    border-radius: 2%;
+
 }
 
 .shopBox2 {
@@ -23,17 +15,17 @@
     justify-content: center;
     align-items: center;
     background-image: url("../images/background.jpg");
-    background-size: 800px;
+    background-size: 200px;
     width: 675px;
     height: auto;
-    margin: 50px;
     border: 10px solid rgb(233, 190, 165);
     box-shadow: 0 0 5px 5px rgb(164, 157, 70);
+    border-radius: 2%;
+
 }
 
 .shopBox3 {
-    background-color: rgb(233, 190, 165);
-    border: 5px solid white;
+    background-color: white;
     width: 575px;
     height: auto;
     margin: 25px;
@@ -42,6 +34,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    border-radius: 2%;
+
 }
 
 .outer-shop_title {
@@ -54,12 +48,14 @@
     color: rgb(137, 94, 14);
     font-family: 'Amatic SC', cursive;
     font-size: larger;
-    font-weight: bolder;
+    font-weight: 500;
     background-image: url("../images/background.jpg");
     background-size: 100px;
     border: 2px solid rgb(137, 94, 14);
     box-shadow: 0 0 2px 2px rgb(164, 157, 70);
     margin-top: 20px;
+    border-radius: 2%;
+
 }
 
 .heading {
@@ -86,7 +82,7 @@
 }
 
 .delete_button_shoppingList {
-    width: 100px;
+    width: 45px;
     height: 30px;
     color: rgb(137, 94, 14);
     font-family: 'Amatic SC', cursive;
@@ -97,12 +93,27 @@
     box-shadow: 0 0 2px 2px rgb(164, 157, 70);
     margin-top: 5px;
     margin-bottom: 5px;
+    border-radius: 2%;
+
 }
 
-.item {
-    margin: 15px;
-}
 
 .item::marker {
     color: rgb(137, 94, 14);
+}
+
+.flexList {
+    display: grid;
+    grid-template-rows: repeat(10px);
+    grid-template-columns: repeat(2, 250px);
+    grid-gap: 10px;
+    padding: 10px
+}
+
+.item {
+    text-align: left;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
 }
