--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -13,7 +13,10 @@
     font-family: 'Amatic SC', cursive;
     font-weight: 600;
     font-size: x-large;
-    background-color: rgb(233, 190, 165);
+    background-image: url("../images/banner.jpg");
+    background-size: auto;
+    margin-bottom: 20px;
+
 }
 
 .logo_nav {
