--- a/src/components/recipes/myRecipes.css
+++ b/src/components/recipes/myRecipes.css
@@ -54,7 +54,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 400px;
+    width: 200px;
     height: 70px;
     color: rgb(137, 94, 14);
     font-family: 'Amatic SC', cursive;
@@ -66,7 +66,7 @@
     box-shadow: 0 0 2px 2px rgb(164, 157, 70);
     margin-bottom: 20px;
     margin-top: 20px;
-    border-radius: 2%;
+    border-radius: 40%;
 
 
 }
@@ -76,11 +76,11 @@
     margin: 10px;
     color: rgb(137, 94, 14);
     font-family: 'Amatic SC', cursive;
-    font-size: x-large;
-    font-weight: 2000;
+    font-size: xx-large;
+    font-weight: 900;
     background-color: white;
-    width: 120px;
-    height: 30px;
+    width: 160px;
+    height: 50px;
     border-radius: 40%;
     padding: 3px
 }
@@ -94,16 +94,14 @@
 }
 
 .delete_button {
-    width: 100px;
+    width: 40px;
     height: 30px;
     color: rgb(137, 94, 14);
     font-family: 'Amatic SC', cursive;
     font-size: medium;
     font-weight: bolder;
-    background-color: rgb(164, 157, 70);
+    background-color: rgb(233, 190, 165);
     border: 2px solid rgb(137, 94, 14);
-    box-shadow: 0 0 2px 2px rgb(164, 157, 70);
-
 }
 
 .recipe::marker {
@@ -115,6 +113,7 @@
     height: 100%;
     border: 2px solid rgb(137, 94, 14);
     margin: 5px;
+    border-radius: 5%;
 }
 
 .recipe {
