--- a/src/components/recipes/shoppingList.css
+++ b/src/components/recipes/shoppingList.css
@@ -43,8 +43,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 400px;
-    height: 70px;
+    width: 200px;
+    height: 55px;
     color: rgb(137, 94, 14);
     font-family: 'Amatic SC', cursive;
     font-size: larger;
@@ -54,7 +54,7 @@
     border: 2px solid rgb(137, 94, 14);
     box-shadow: 0 0 2px 2px rgb(164, 157, 70);
     margin-top: 20px;
-    border-radius: 2%;
+    border-radius: 40%;
 
 }
 
@@ -66,7 +66,7 @@
     font-size: xx-large;
     font-weight: 2000;
     background-color: white;
-    width: 160px;
+    width: 180px;
     height: 40px;
     border-radius: 40%;
     padding: 3px
@@ -82,18 +82,18 @@
 }
 
 .delete_button_shoppingList {
-    width: 45px;
+    width: 35px;
     height: 30px;
     color: rgb(137, 94, 14);
     font-family: 'Amatic SC', cursive;
-    font-size: medium;
+    font-size: small;
     font-weight: bolder;
-    background-color: rgb(164, 157, 70);
+    background-color: rgb(233, 190, 165);
     border: 2px solid rgb(137, 94, 14);
     box-shadow: 0 0 2px 2px rgb(164, 157, 70);
     margin-top: 5px;
     margin-bottom: 5px;
-    border-radius: 2%;
+    border-radius: 40%;
 
 }
 
