--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -37,14 +37,17 @@
 
 .intro {
     color: rgb(137, 94, 14);
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Jua';
     font-size: larger;
-    font-weight: 800;
+    font-weight: 400;
     margin-top: 20px;
-    margin-left: 70px;
-    margin-right: 70px;
+    margin-left: 150px;
+    margin-right: 150px;
     margin-bottom: 10px;
+    font-style: italic;
+    text-align: center;
 }
+
 
 .intro2 {
     color: rgb(137, 94, 14);
@@ -62,8 +65,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 90px;
+    margin-right: 90px;
     background-color: rgba(207, 162, 72, 0.5);
     box-shadow: 0 0 5px 5px rgba(207, 162, 72, 0.5);
     padding: 20px;
@@ -115,6 +118,8 @@
 
 .headLine {
     margin: 0;
+    font-size: x-large;
+    font-weight: 900;
 }
 
 .info3 {
@@ -162,13 +167,13 @@
     margin: 20px;
 }
 
-.box {
+.box3 {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgba(207, 162, 72, 0.5);
-    box-shadow: 0 0 5px 5px rgba(207, 162, 72, 0.5);
+    background-color: rgba(164, 157, 70, 0.5);
+    box-shadow: 0 0 5px 5px rgba(164, 157, 70, 0.5);
     border-radius: 30%;
     margin: 30px;
     padding: 20px;
@@ -231,4 +236,16 @@
 
 .pic {
     margin-right: 20px;
+}
+
+.info5 {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.answerLine {
+    font-family: 'Jua';
+    font-size: medium;
+    font-weight: 100;
+    color: rgb(137, 94, 14);
 }
