--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 
 .navbar__item {
     flex-basis: 20%;
@@ -11,11 +12,10 @@
     justify-content: left;
     flex: row;
     font-family: 'Amatic SC', cursive;
-    font-weight: 600;
-    font-size: x-large;
+    font-weight: 900;
+    font-size: xx-large;
     background-image: url("../images/banner.jpg");
-    background-size: auto;
-    margin-bottom: 20px;
+    background-size: 5000px;
 
 }
 
@@ -31,7 +31,7 @@
 }
 
 .navbar__link {
-    font-size: large;
+    font-size: x-large;
     text-decoration: none;
     color: rgb(98, 66, 8);
     align-items: center;
