--- a/src/components/recipes/ingredientEdit.css
+++ b/src/components/recipes/ingredientEdit.css
@@ -1,20 +1,11 @@
 .editBox1 {
-    margin-top: 20px;
+    padding: 30px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-}
-
-.editBox2 {
-    background-color: rgb(137, 94, 14);
-    width: 800px;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
+    padding: 50px;
+    background-color: rgba(233, 190, 165, 0.5);
 }
 
 .editBox3 {
@@ -23,16 +14,17 @@
     justify-content: center;
     align-items: center;
     background-image: url("../images/background.jpg");
-    background-size: 800px;
+    background-size: 200px;
     width: 675px;
     height: auto;
     margin: 50px;
     border: 10px solid rgb(233, 190, 165);
     box-shadow: 0 0 5px 5px rgb(164, 157, 70);
+    border-radius: 5%;
 }
 
 .editBox4 {
-    background-color: rgb(233, 190, 165);
+    background-color: white;
     border: 5px solid white;
     width: 575px;
     height: auto;
@@ -52,7 +44,7 @@
     color: rgb(137, 94, 14);
     font-family: 'Amatic SC', cursive;
     font-size: xx-large;
-    font-weight: 2000;
+    font-weight: 900;
     background-color: white;
     width: 160px;
     height: 40px;
@@ -65,8 +57,8 @@
     text-decoration: none;
     color: rgb(137, 94, 14);
     font-family: 'Amatic SC', cursive;
-    font-size: x-large;
-    font-weight: 2000;
+    font-size: xx-large;
+    font-weight: 900;
 }
 
 .label {
@@ -88,4 +80,5 @@
     box-shadow: 0 0 2px 2px rgb(164, 157, 70);
     margin-top: 5px;
     margin-bottom: 5px;
+    border-radius: 10%;
 }
