--- a/src/components/recipes/myRecipes.css
+++ b/src/components/recipes/myRecipes.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    padding: 50px;
+    background-color: rgba(233, 190, 165, 0.5);
 }
 
 .inner_list {
