--- a/src/components/recipes/recipeForm.css
+++ b/src/components/recipes/recipeForm.css
@@ -6,6 +6,8 @@
     flex-direction: column;
     align-items: center;
     border-radius: 2%;
+    padding: 50px;
+    background-color: rgba(233, 190, 165, 0.5);
 
 }
 
