--- a/src/components/recipes/recipeProfile.css
+++ b/src/components/recipes/recipeProfile.css
@@ -4,6 +4,8 @@
     justify-content: center;
     align-items: center;
     border-radius: 2%;
+    padding: 50px;
+    background-color: rgba(233, 190, 165, 0.5);
 
 }
 
@@ -149,10 +151,10 @@
 }
 
 .directions {
+    font-family: 'Jua';
+    font-size: medium;
+    font-weight: 100;
     color: rgb(137, 94, 14);
-    font-family: 'Amatic SC', cursive;
-    font-size: large;
-    font-weight: bolder;
 }
 
 .flexIng {
@@ -173,6 +175,10 @@
     font-size: x-large;
     text-decoration: underline;
     padding-bottom: 5px;
+    color: rgb(137, 94, 14);
+    font-family: 'Amatic SC', cursive;
+    font-size: xx-large;
+    font-weight: 900
 }
 
 .recipeProfile {
