--- a/src/components/recipes/shoppingList.css
+++ b/src/components/recipes/shoppingList.css
@@ -1,6 +1,7 @@
 .shopping_list {
     background-color: rgba(233, 190, 165, 0.5);
-    padding: 30px;
+    padding: 50px;
+    padding-bottom: 150px;
 }
 
 .shopBox1 {
