--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -33,13 +33,14 @@
     height: 20px;
     margin: 10px;
     width: 1000px;
+    border-radius: 40%;
 }
 
 .intro {
     color: rgb(137, 94, 14);
     font-family: 'Jua';
     font-size: larger;
-    font-weight: 400;
+    font-weight: 0;
     margin-top: 20px;
     margin-left: 150px;
     margin-right: 150px;
@@ -81,6 +82,7 @@
     height: 20px;
     margin: 10px;
     width: 1000px;
+    border-radius: 40%;
 }
 
 .saying {
