--- a/src/components/resources/resources.css
+++ b/src/components/resources/resources.css
@@ -11,12 +11,13 @@
     justify-content: center;
     align-items: center;
     padding: 20px;
-    background-color: rgb(233, 190, 165);
+    background-color: rgb(249, 227, 215);
     margin-top: 0px;
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 30px;
     border: 2px solid rgb(137, 94, 14);
+    box-shadow: 0 0 2px 2px rgb(137, 94, 14);
 }
 
 .books {
@@ -54,10 +55,76 @@
     text-align: center;
     color: rgb(137, 94, 14);
     font-family: 'Amatic SC', cursive;
-    font-size: xx-large;
+    font-size: x-large;
     font-weight: 900;
     background-color: rgba(207, 162, 72, 0.5);
     padding: 30px;
     margin: 20px;
+    border-radius: 20%;
+    width: 450px;
+}
+
+.headingDiv {
+    margin: 30px;
+    background-image: url("../images/readingWoman.jpg");
+    background-size: 700px;
+    background-repeat: no-repeat;
+    height: 350px;
+    width: 850px;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    align-items: center;
+}
+
+.ResTitle {
+    text-align: center;
+    color: rgb(137, 94, 14);
+    font-family: 'Amatic SC', cursive;
+    font-size: xx-large;
+    font-weight: 900;
+}
+
+.section1 {
+    display: flex;
+    flex-direction: row;
+    margin: 30px;
+}
+
+.infoG {
+    margin: 20px;
+}
+
+.extraRes {
+    text-align: center;
+    color: rgb(137, 94, 14);
+    font-family: 'Amatic SC', cursive;
+    font-size: x-large;
+    font-weight: 900;
+    background-color: rgba(207, 162, 72, 0.5);
+    padding: 30px;
+    margin: 10px;
+    border-radius: 20%;
+    width: 800px;
+}
+
+.pic7 {
+    background-color: rgb(249, 227, 215);
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin: 10px;
+    border-radius: 5%;
+
+}
+
+.pic8 {
+    background-color: rgba(164, 157, 70, 0.5);
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin: 10px;
     border-radius: 5%;
 }
