--- a/src/components/resources/resources.css
+++ b/src/components/resources/resources.css
@@ -26,6 +26,7 @@
     padding: 50px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     margin: 30px;
     justify-content: center;
     align-items: center;
